# speech_to_text_converter

./: .gitignore  Dockerfile  Makefile  README.md  channel_link_collector.py  conftest.py  loader.py  main.py  pyproject.toml  requirements.txt  transcriber.py  yt_dlp_loader.py
src/: bot.py  captions.py  cli.py  config.py  main.py  objects.py  pytube_loader.py  transcriber.py  workers.py  youtube_api.py  yt_dlp_loader.py
src/app/: handlers.py  keyboards.py  main_workers.py  replies.py
src/executors/: process_executor.py  storage_executor.py
src/process_executors/: abstract.py  process_executor.py
src/storage/: dropbox_storage.py  storage_worker.py
src/transcribers/: abscract.py  abscract_transcriber.py  faster_whisper_transcriber.py  transcriber_worker.py  whisper_transcriber.py  worker.py
src/youtube_clients/: youtube_api.py  youtube_loader.py
src/youtube_workers/: youtube_api.py  youtube_loader.py  yt_dlp_loader.py
tests/: test_dropbox.py  test_process_executor.py  test_transciber_worker.py  test_you_tube_loader.py  test_youtube_client.py  test_youtube_loader.py
tests/executors/: test_process_executor.py
tests/storage/: test_storage_executor.py  test_storage_worker.py
tests/workers/: test_transciber_worker.py
tests/youtube_clients/: test_youtube_client.py  test_youtube_loader.py
